--- a/CalculatorStanford/Base.lproj/Main.storyboard
+++ b/CalculatorStanford/Base.lproj/Main.storyboard
@@ -83,7 +83,7 @@
                                                         <rect key="frame" x="0.0" y="0.0" width="78.5" height="108.5"/>
                                                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                                        <state key="normal" title="π"/>
+                                                        <state key="normal" title="✅"/>
                                                         <connections>
                                                             <action selector="performOp:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ryi-Vq-dJ2"/>
                                                         </connections>
